fix(banner): wrong padding

--- a/components/banner/src/vwc-banner.scss
+++ b/components/banner/src/vwc-banner.scss
@@ -30,7 +30,7 @@
 				flex: 1 0;
 				align-items: center;
 				justify-content: center;
-				padding-inline: 15px;
+				padding-inline: 16px;
 
 				> .icon {
 					--icon-size: 20px;
